--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.14.1",
     "browser-sync": "^2.11.1",
+    "client-sessions": "^0.8.0",
     "cross-spawn": "^5.0.0",
     "dotenv": "^4.0.0",
     "express": "4.15.2",
